# redeem

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md
.github/workflows/: changelog.yml  docker-publish.yml  docs.yml  python-wheels.yml  release.yml  rust.yml
crates/redeem-classifiers/: Cargo.toml  README.md
crates/redeem-classifiers/examples/: README.md  gbdt_semi_supervised_learning.rs  svm_semi_supervised_learning.rs  xgb_semi_supervised_learning.rs  xgb_synthetic.rs
crates/redeem-classifiers/src/: config.rs  data_handling.rs  error.rs  lib.rs  preprocessing.rs  psm_scorer.rs  stats.rs
crates/redeem-classifiers/src/feature_selection/: mod.rs  univariate_selection.rs
crates/redeem-classifiers/src/io/: mod.rs  percolator_pin.rs
crates/redeem-classifiers/src/math/: matrix.rs  mod.rs  vector.rs
crates/redeem-classifiers/src/models/: classifier_trait.rs  factory.rs  gbdt.rs  mod.rs  svm.rs  utils.rs  xgboost.rs
crates/redeem-classifiers/src/report/: mod.rs  plots.rs  report.rs
crates/redeem-classifiers/tests/: factory_model.rs  xgb_regression.rs
crates/redeem-cli/: Cargo.toml
crates/redeem-cli/src/: lib.rs  main.rs
crates/redeem-cli/src/classifiers/score/: score.rs
crates/redeem-cli/src/properties/: load_data.rs  mod.rs  util.rs
crates/redeem-cli/src/properties/inference/: inference.rs  input.rs  mod.rs  output.rs
crates/redeem-cli/src/properties/train/: input.rs  mod.rs  plot.rs  trainer.rs
crates/redeem-properties/: Cargo.toml  README.md
crates/redeem-properties-py/: Cargo.toml  README.md  pyproject.toml  test_basic.py
crates/redeem-properties-py/docs/source/: conf.py  index.md
crates/redeem-properties-py/python/redeem_properties_py/: __init__.py
crates/redeem-properties-py/python/tests/: test_predictions.py
crates/redeem-properties-py/src/: lib.rs
crates/redeem-properties/examples/: alphapeptdeep_ccs_cnn_lstm.rs  alphapeptdeep_ms2_bert.rs  alphapeptdeep_rt_cnn_lstm.rs  redeem_ccs_cnn_tf.rs
crates/redeem-properties/src/: lib.rs  model_interface.rs
crates/redeem-properties/src/building_blocks/: bilstm.rs  building_blocks.rs  featurize.rs  mod.rs  nn.rs  sequential.rs
crates/redeem-properties/src/models/: ccs_cnn_lstm_model.rs  ccs_cnn_tf_model.rs  ccs_model.rs  mod.rs  model_interface.rs  ms2_bert_model.rs  ms2_model.rs  rt_cnn_lstm_model.rs  rt_cnn_transformer_model.rs  rt_model.rs
crates/redeem-properties/src/pretrained/: mod.rs
crates/redeem-properties/src/utils/: data_handling.rs  logging.rs  mod.rs  peptdeep_utils.rs  stats.rs  utils.rs
redeem-classifiers/: Cargo.toml  README.md
redeem-classifiers/examples/: README.md  svm_semi_supervised_learning.rs  xgb_semi_supervised_learning.rs  xgb_synthetic.rs
redeem-classifiers/src/: error.rs  preprocessing.rs  psm_scorer.rs
redeem-classifiers/src/feature_selection/: univariate_selection.rs
redeem-classifiers/src/math/: matrix.rs
redeem-classifiers/src/models/: gbdt.rs  mod.rs  svm.rs
redeem-classifiers/src/report/: mod.rs  plots.rs  report.rs
redeem-classifiers/tests/: data_handling.rs  factory_model.rs  math_types.rs  preprocessing.rs  stats_and_config.rs  xgb_regression.rs
redeem-cli/: Cargo.toml  README.md
redeem-cli/src/: main.rs
redeem-cli/src/properties/: util.rs
redeem-cli/src/properties/inference/: inference.rs  mod.rs
redeem-cli/src/properties/train/: input.rs  plot.rs
redeem-cli/tests/: cli_smoke.rs  config_and_util.rs
redeem-properties/: Cargo.toml  README.md
redeem-properties-py/: Cargo.toml  README.md  pyproject.toml  test_basic.py
redeem-properties-py/docs/: README.md
redeem-properties-py/docs/source/: api.md  conf.py  getting_started.md
redeem-properties-py/docs/source/_static/: custom.css
redeem-properties-py/python/redeem_properties/: __init__.py
redeem-properties-py/src/: lib.rs
redeem-properties-py/tests/: test_basic.py  test_mz_utils.py
redeem-properties/examples/: alphapeptdeep_rt_cnn_lstm.rs
redeem-properties/src/: lib.rs
redeem-properties/src/building_blocks/: bilstm.rs  building_blocks.rs  featurize.rs
redeem-properties/src/models/: ccs_cnn_lstm_model.rs  ccs_model.rs  mod.rs  model_interface.rs  ms2_bert_model.rs  ms2_model.rs  rt_cnn_lstm_model.rs  rt_model.rs
redeem-properties/src/pretrained/: mod.rs
redeem-properties/src/utils/: data_handling.rs  logging.rs  mz_utils.rs  peptdeep_utils.rs  utils.rs
redeem-properties/tests/: encoding_utils.rs  model_types.rs  mz_utils.rs  pretrained.rs
src/: model_interface.rs
src/building_blocks/: bilstm.rs  building_blocks.rs  mod.rs
src/models/: mod.rs  ms2_bert_model.rs  rt_cnn_lstm_model.rs  rt_model.rs
src/utils/: logging.rs  mod.rs  peptdeep_utils.rs
