[package]
name = "redeem-classifiers"
version = "0.1.0"
authors = ["Justin Sing <justincsing@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "A repository of deep-learning models for mass spectrometry data"
readme = "README.md"


[dependencies]
anyhow = "1.0"
env_logger = "0.8.4"
log = "0.4.0"
rand = "0.8"
serde = { version="1.0", features = ["derive"] }
statrs = "0.17.1"
gbdt = {git = "https://github.com/singjc/gbdt-rs.git", branch = "add/decision_function"}
rayon = "1.5"
csv = "1.3.1"
plotly = "0.12.1"
maud = "0.27.0"
chrono = "0.4.39"
itertools-num = "0.1.3"
num-traits = "0.2"
# Mark light-svm as optional so the `svm` feature can enable it
light-svm = { version = "0.1.0", optional = true }
report-builder = "0.1.0"

# Optional dependencies
[features]
default = []  # No default features
# feature name kept as `xgboost` for cfg(...) compatibility; it enables the
# crates.io `xgb` dependency.
xgboost = ["dep:xgb"]
svm = ["dep:light-svm"]
simd = []

[dependencies.xgb]
version = "3.0.5"
optional = true

[lib]
name = "redeem_classifiers"
path = "src/lib.rs"


[dev-dependencies]
approx = "0.5"