[package]
name = "redeem-classifiers"
version = "0.1.0"
authors = ["Justin Sing <justincsing@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "A repository of deep-learning models for mass spectrometry data"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
env_logger = "0.8.4"
log = "0.4.0"
rand = "0.8"
serde = { version="1.0", features = ["derive"] }
statrs = "0.17.1"
ndarray = "0.15"
#ndarray = "0.16.1"
ndarray-stats = "0.6.0"
xgboost = "0.1.4"
linfa-svm = "0.7.2"
linfa = "0.7.1"
gbdt = "0.1.3"
rayon = "1.5"
sage-core = { git = "https://github.com/lazear/sage", branch = "master" }
csv = "1.3.1"

plotly = "0.12.1"
maud = "0.27.0"
chrono = "0.4.39"
itertools-num = "0.1.3"

[lib]
name = "redeem_classifiers"
path = "src/lib.rs"