[package]
name = "redeem-classifiers"
version = "0.1.0"
authors = ["Justin Sing <justincsing@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "A repository of deep-learning models for mass spectrometry data"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
env_logger = "0.8.4"
log = "0.4.0"
rand = "0.8"
serde = { version="1.0", features = ["derive"] }
statrs = "0.17.1"
ndarray = "0.15"
#ndarray = "0.16.1"
# ndarray-stats = "0.6.0"
# xgboost-rs = "0.3.0"
# xgboost = { git = "https://github.com/singjc/rust-xgboost.git", branch = "master" }
gbdt = "0.1.3"
# linfa-logistic = "0.7.1"
rayon = "1.5"
sage-core = { git = "https://github.com/lazear/sage", branch = "master" }
csv = "1.3.1"
# linfa-datasets = { version = "0.7.1", features = ["winequality"] }
plotly = "0.12.1"
maud = "0.27.0"
chrono = "0.4.39"
itertools-num = "0.1.3"

# Optional dependencies
[features]
default = []  # No default features
# xgboost = ["dep:xgboost"]  
linfa = ["dep:linfa", "dep:linfa-svm"]  

[dependencies.xgboost]
#version = "0.1.4"
# git = "https://github.com/singjc/rust-xgboost.git"
path = "/home/singjc/Documents/github/rust-xgboost"
optional = true  

[dependencies.linfa]
version = "0.7.1"
optional = true  

[dependencies.linfa-svm]
version = "0.7.2"
optional = true  

[lib]
name = "redeem_classifiers"
path = "src/lib.rs"
