[package]
name = "redeem-cli"
version = "0.1.0"
edition = "2024"
authors = ["Justin Sing <justincsing@gmail.com>"]
description = "A repository of deep-learning models for mass spectrometry data"

[[bin]]
name = "redeem"
path = "src/main.rs"

[dependencies]
redeem-properties = { path = "../redeem-properties" }
env_logger = "0.11.8"
log = "0.4"
clap = { version="4.0", features = ["cargo", "unicode"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"

[dependencies.candle-core]
version = "0.8.4"
default-features = false
features = []

[features]
default = []
cuda = ["candle-core/cuda"]