[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "redeem-properties-py"
requires-python = ">=3.10"
dependencies = ["numpy>=1.20"]
version = "0.0.1"

[project.optional-dependencies]
pandas = ["pandas>=1.3"]
polars = ["polars>=0.20"]

[tool.maturin]
python-source = "python"
module-name = "redeem_properties_py._lib"
features = ["pyo3/extension-module"]
