[package]
name = "redeem-properties"
version = "0.1.0"
authors = ["Justin Sing <justincsing@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "A repository of deep-learning models for mass spectrometry data"
readme = "README.md"
license = "MIT"

[dependencies]
anyhow = "1.0"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
ndarray = "0.15"
reqwest = { version = "0.11", features = ["blocking"] }
csv = "1.1"
regex = "1.6"

[dependencies.candle-core]
git = "https://github.com/huggingface/candle.git"
version = "0.8.2"
default-features = false
features = []

[dependencies.candle-nn]
git = "https://github.com/huggingface/candle.git"
default-features = false
features = []

[dependencies.candle-transformers]
git = "https://github.com/huggingface/candle.git"
default-features = false
features = []

[features]
default = []
cuda = ["candle-core/cuda"]


[lib]
name = "redeem_properties"
path = "src/lib.rs"
