[package]
name = "redeem-properties"
version = "0.1.0"
authors = ["Justin Sing <justincsing@gmail.com>"]
edition = "2021"
rust-version = "1.76"
description = "A repository of deep-learning models for mass spectrometry data"
readme = "README.md"


[dependencies]
anyhow = "1.0"
env_logger = "0.8.4"
log = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
once_cell = "1.8"
ndarray = "0.15"
#ndarray = "0.16.1"
reqwest = { version = "0.11", features = ["blocking"] }
itertools = "0.14.0"
zip = "2.2.2"
csv = "1.1"
regex = "1.6"
tqdm = "0.8.0"
rayon = "1.5"
sysinfo = "0.33.1"
rustyms = { version = "0.11", default-features = false }

# Optional embedding of pretrained model files into the crate binary.
[dependencies.include_dir]
version = "0.7"
optional = true

[dependencies.candle-core]
version = "0.8.4"
default-features = false
features = []

[dependencies.candle-nn]
version = "0.8.4"
default-features = false
features = []

[dependencies.candle-transformers]
version = "0.8.4"
default-features = false
features = []

[features]
default = []
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda"]
embed-pretrained = ["include_dir"]


[lib]
name = "redeem_properties"
path = "src/lib.rs"
